fixed some layout issues

--- a/src/css/utility.css
+++ b/src/css/utility.css
@@ -14,6 +14,9 @@
 {
     background: transparent !important;
 }
+.mt10{
+  margin-top:10%;
+}
 .cb{
   color:black;
 }
